--- a/README
+++ b/README
@@ -1,3 +1,5 @@
 DaDebStaller is a python application written using pygtk that parses and installs .deb installation files on linux
 
-The project is mostly a hack, and predates other projects such as gDebi (http://en.wikipedia.org/wiki/GDebi) by 2-3 months. ≈
+The project is mostly a hack, and predates other projects such as gDebi (http://en.wikipedia.org/wiki/GDebi) by 2-3 months.
+
+This Project was initially created October 30, 2005. Last updated March 2006.
