--- a/README
+++ b/README
@@ -3,3 +3,9 @@ DaDebStaller is a python application written using pygtk that parses and install
 The project is mostly a hack, and predates other projects such as gDebi (http://en.wikipedia.org/wiki/GDebi) by 2-3 months.
 
 This Project was initially created October 30, 2005. Last updated March 2006.
+
+Screen Shots
+------------
+
+.. image:: https://github.com/dabear/DaDebStaller/blob/master/screenshotdadebstaller.png
+
